# ohtuvarasto

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  hello.txt  pyproject.toml
app/: __init__.py  config.py  models.py
app/routes/: api.py  auth.py  items.py  main.py  warehouses.py
app/schemas/: __init__.py
app/services/: __init__.py
app/static/css/: style.css
app/templates/: base.html  dashboard.html  index.html
app/templates/auth/: create_user.html  login.html  register.html  users.html
app/templates/items/: create.html  edit.html  search.html  transfer.html
app/templates/warehouses/: create.html  edit.html  list.html  view.html
src/: index.py  varasto.py
src/tests/: varasto_test.py
tests/: conftest.py  test_api.py  test_auth.py  test_models.py
